SUBDIRS = libmat

if HAVE_BLAS
if HAVE_LAPACK
SUBDIRS += tests
endif
endif

EXTRA_DIST = \
	DecisionRules.cc \
	DecisionRules.hh \
	DetrendData.cc \
	DetrendData.hh \
	EstimatedParameter.cc \
	EstimatedParameter.hh \
	EstimatedParametersDescription.cc \
	EstimatedParametersDescription.hh \
	EstimationSubsample.cc \
	EstimationSubsample.hh \
	InitializeKalmanFilter.cc \
	InitializeKalmanFilter.hh \
	KalmanFilter.cc \
	KalmanFilter.hh \
	LogLikelihoodMain.hh \
	LogLikelihoodMain.cc \
	LogLikelihoodSubSample.cc \
	LogLikelihoodSubSample.hh \
	logMHMCMCposterior.cc \
	logposterior.cc \
	LogPosteriorDensity.cc \
	LogPosteriorDensity.hh \
	LogPriorDensity.cc \
	LogPriorDensity.hh \
	ModelSolution.cc \
	ModelSolution.hh \
	Prior.cc \
	Prior.hh \
	Proposal.cc \
	Proposal.hh \
	RandomWalkMetropolisHastings.cc \
	RandomWalkMetropolisHastings.hh \
	utils/dynamic_dll.cc \
	utils/dynamic_dll.hh \
	utils/ts_exception.h
