if HAVE_BLAS
if HAVE_LAPACK
SUBDIRS = tests
endif
endif

EXTRA_DIST = \
	BlasBindings.hh \
	DiscLyapFast.hh \
	GeneralizedSchurDecomposition.cc \
	GeneralizedSchurDecomposition.hh \
	LUSolver.cc \
	LUSolver.hh \
	Matrix.cc \
	Matrix.hh \
	QRDecomposition.cc \
	QRDecomposition.hh \
	Vector.cc \
	Vector.hh
