if HAVE_BLAS
if HAVE_LAPACK
SUBDIRS = tests
endif
endif

EXTRA_DIST = \
	Matrix.hh \
	Matrix.cc \
	Vector.hh \
	Vector.cc \
	BlasBindings.hh \
	DiscLyapFast.hh \
	GeneralizedSchurDecomposition.cc \
	GeneralizedSchurDecomposition.hh \
	LapackBindings.hh \
	LUSolver.cc \
	LUSolver.hh \
	QRDecomposition.cc \
	QRDecomposition.hh \
	VDVEigDecomposition.cc \
	VDVEigDecomposition.hh
